fix: next arrow only shows when last item isn't fully visible

--- a/src/components/relatedItems/modal.module.css
+++ b/src/components/relatedItems/modal.module.css
@@ -14,7 +14,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 85%;
   height: auto;
   /* overflowY: scroll; */
   background-color: white;
